# libarchive_oxide

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  REUSE.toml  ROADMAP.md  SECURITY.md  clippy.toml  committed.toml  deny.toml  lefthook.yml  mise.toml  release-plz.toml  rust-toolchain.toml  rustfmt.toml  typos.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  modern_replacement.yml
.github/workflows/: bootstrap-publish.yml  ci.yml  codeql.yml  docs.yml  release-approval.yml  release-assets.yml  release.yml
arca/: Cargo.toml
arca-cli/: Cargo.toml
arca-cli/src/: main.rs
arca-core/: Cargo.toml
arca-core/src/: error.rs  filter.rs  format.rs  io.rs  lib.rs  meta.rs  transform.rs
arca-core/src/format/: ar.rs  cpio.rs  iso9660.rs  tar.rs
arca-core/tests/: cpio_ar_read.rs  cpio_ar_write.rs  frozen_abstraction.rs  iso_malformed.rs  iso_roundtrip.rs  tar_read.rs  tar_source.rs  tar_write.rs  tar_write_differential.rs
arca-filter/: Cargo.toml
arca-filter/src/: bridge.rs  gzip.rs  lib.rs  push.rs  reused.rs
arca-filter/tests/: gzip_header_split.rs
arca/src/: create.rs  extract.rs  lib.rs  path.rs  sevenz.rs  zip.rs
arca/tests/: compress_roundtrip.rs  compression.rs  create_fs.rs  deb.rs  deb_create.rs  extract_fs.rs  frozen_static.rs  fuzz_replay.rs  iso_differential.rs  sevenz_differential.rs  sevenz_malformed.rs  sevenz_roundtrip.rs  tar_source_gz.rs  targz.rs  zip64.rs  zip_aes.rs  zip_malformed.rs  zip_read.rs  zip_write.rs  zip_write_differential.rs
arca/tests/common/: mod.rs
docs/: cli-contract.md  codec-profiles.md  filesystem-adapters.md  migration-0.2.md  modern-replacement.md  providers.md  support-matrix.md
docs/adr/: 0001-core-architecture.md  0002-workspace-releases.md  0003-session-bound-engine.md  0004-immutable-range-sources.md  0005-codec-profiles.md  0006-compile-time-providers.md  0007-capability-filesystem.md  (+6 more)
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/corpus/codec_bzip2/: seed.bz2
fuzz/corpus/codec_lz4/: seed.lz4
fuzz/corpus/codec_lzma2/: seed.lzma2
fuzz/corpus/codec_xz/: seed.xz
fuzz/corpus/codec_zstd/: seed.zst
fuzz/corpus/read_7z/: seed.7z
fuzz/corpus/read_7z_graph/: arca_solid.7z  bcj_lzma2.7z  deflate_folder.7z  delta_lzma2.7z  lzma_folder.7z  multi_folder.7z
fuzz/corpus/read_cpio/: seed.cpio
fuzz/corpus/read_iso/: seed.iso
fuzz/corpus/read_tar/: seed.tar
fuzz/fuzz_lib/: Cargo.toml
fuzz/fuzz_lib/src/: lib.rs
fuzz/fuzz_targets/: codec_bzip2.rs  codec_gzip.rs  codec_lz4.rs  codec_lzma2.rs  codec_xz.rs  codec_zstd.rs  read_7z.rs  read_7z_graph.rs  read_ar.rs  read_cpio.rs  read_iso.rs  read_tar.rs  read_zip.rs  roundtrip_7z.rs  roundtrip_ar.rs  roundtrip_cpio.rs  roundtrip_iso.rs  roundtrip_tar.rs
libarchive_oxide/: Cargo.toml  README.md
libarchive_oxide-cli/: Cargo.toml  README.md
libarchive_oxide-cli/src/: cat.rs  cpio.rs  lib.rs  oci.rs  oxarchive.rs  package.rs  tar.rs  unzip.rs
libarchive_oxide-cli/tests/: contract.rs  differential.rs  oci_cli.rs  oxarchive.rs  package_cli.rs  roundtrip.rs  safe_defaults.rs
libarchive_oxide-cli/tests/common/: mod.rs
libarchive_oxide-core/: Cargo.toml  README.md
libarchive_oxide-core/examples/: sans_io.rs
libarchive_oxide-core/src/: error.rs  filter.rs  format.rs  io.rs  lib.rs  limits.rs  meta.rs  metadata.rs  protocol.rs  transform.rs
libarchive_oxide-core/src/format/: ar.rs  cpio.rs  iso9660.rs  tar.rs
libarchive_oxide-core/tests/: cpio_ar_read.rs  cpio_ar_write.rs  frozen_abstraction.rs  iso_malformed.rs  iso_roundtrip.rs  protocol_v2.rs  tar_read.rs  tar_source.rs  tar_write.rs  tar_write_differential.rs
libarchive_oxide/examples/: codec_profile_probe.rs  create_zip.rs  extract_safe.rs  oci_range_adapter.rs  range_source.rs  read_async.rs  read_tar_gz.rs  read_tokio.rs
libarchive_oxide/src/: async_filter.rs  async_range.rs  async_seek.rs  async_stream.rs  backend_codec.rs  cab.rs  codec_read.rs  create.rs  engine.rs  extract.rs  extractor.rs  filesystem.rs  filesystem_driver.rs  filesystem_std.rs  filtered_io.rs  iso_stream.rs  lib.rs  path.rs  pipeline_codec.rs  provider.rs  range_source.rs  secret.rs  seek_stream.rs  sevenz.rs  spool.rs  stream.rs  tokio_stream.rs  xar.rs  zip.rs  zip_stream.rs
libarchive_oxide/src/filter/: aes7z.rs  bcj.rs  bridge.rs  delta.rs  gzip.rs  lz4.rs  mod.rs  push.rs  reused.rs  xz.rs  zstd.rs
libarchive_oxide/src/oci/: apply.rs  create.rs  digest.rs  layer.rs  mod.rs  plan.rs
libarchive_oxide/src/package/: app_profile.rs  deb.rs  finding.rs  mod.rs  rpm.rs  zip_profile.rs  zip_reader.rs
libarchive_oxide/tests/: async_seek_v2.rs  async_stream_v2.rs  compress_roundtrip.rs  compression.rs  create_fs.rs  deb.rs  deb_create.rs  engine.rs  extract_fs.rs  fault_io_v2.rs  filesystem_adapter.rs  filtered_io_v2.rs  frozen_static.rs  fuzz_replay.rs  gzip_header_split.rs  interop_ar_meta.rs  interop_cab_meta.rs  interop_cpio_meta.rs  interop_foundation.rs  interop_iso_meta.rs  interop_tar_meta.rs  interop_xar_meta.rs  interop_zip_bzip2.rs  interop_zip_extra.rs  interop_zip_lzma.rs  interop_zip_zstd.rs  iso_differential.rs  large_stream_v2.rs  oci_create.rs  oci_layer.rs  oci_range.rs  package_app.rs  package_deb.rs  package_rpm.rs  package_zip.rs  providers.rs  range_source.rs  secure_extract_v2.rs  seek_stream_v2.rs  sevenz_differential.rs  (+13 more)
libarchive_oxide/tests/common/: mod.rs
libarchive_oxide/tests/fixtures/ar/: PROVENANCE.md
libarchive_oxide/tests/fixtures/cab/: PROVENANCE.md
libarchive_oxide/tests/fixtures/cpio/: PROVENANCE.md
libarchive_oxide/tests/fixtures/iso/: PROVENANCE.md
libarchive_oxide/tests/fixtures/sevenz/: PROVENANCE.md
libarchive_oxide/tests/fixtures/tar/: PROVENANCE.md
libarchive_oxide/tests/fixtures/xar/: PROVENANCE.md
libarchive_oxide/tests/fixtures/zip/: PROVENANCE.md
libarchive_oxide/tests/fixtures/zip/python-lzma/: generate.py
scripts/: check-license-sync.sh  check-no-dyn.sh
xtask/: Cargo.toml
xtask/src/: main.rs
(+15 files in other folders)
