# SPDX-FileCopyrightText: 2026 libarchive_oxide contributors
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[workspace]
resolver = "2"
members = ["libarchive_oxide-core", "libarchive_oxide", "libarchive_oxide-cli"]
# cargo-fuzz requires nightly and a sanitizer runtime.
exclude = ["fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2021"
# Required by `core::error::Error`. Higher-level crates override this value.
rust-version = "1.81"
license = "MIT OR Apache-2.0"
authors = ["Yasunobu Sakashita <crates.tank733@slmails.com>"]
repository = "https://github.com/P4suta/libarchive_oxide"
homepage = "https://github.com/P4suta/libarchive_oxide"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Production code must not use unwrap, expect, or panic.
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
missing_errors_doc = "allow"

[workspace.lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
