[package]
name = "arca-cli"
version = "0.0.0"
description = "bsdtar-style demo CLI. Serves as both dogfooding and the real observation surface for round-trip integration tests."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "arca"
path = "src/main.rs"

[dependencies]
# The CLI enables AES (zip `--encrypt`/`--password`) and 7z read+write end-to-end.
arca = { path = "../arca", features = ["aes", "sevenz"] }
arca-core = { version = "0.0.0", path = "../arca-core" }

[lints]
workspace = true
