[package]
name = "arca-core"
version = "0.0.0"
description = "Frozen trait algebra and sans-IO core: Transform/Filter/Format/EntryReader/EntryWriter. no_std + alloc."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
default = []
# core defaults to no_std + alloc. std is only a thin addition for adaptors (future).
std = []

[lints]
workspace = true
