[package]
name = "arca-filter"
version = "0.0.0"
description = "Compression filter implementations: an in-house inflate (no_std) and fully conforming adapters over reused crates (std). Origin-opaque."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
default = ["gzip"]
# gzip = adapt miniz_oxide (with-alloc) into a Filter. Stays no_std.
gzip = ["dep:miniz_oxide"]
# Heavyweight codecs pull in std because they wrap reused crates. A seam exposed on the surface.
std = []
zstd = ["std"]  # ruzstd adapter (P3)
xz = ["std"]    # lzma_rust2 adapter (P3)
lz4 = ["std"]   # lz4_flex adapter (P3)
bzip2 = ["std"] # bzip2 adapter (later)

[dependencies]
arca-core = { path = "../arca-core" }
miniz_oxide = { version = "0.9.1", default-features = false, features = ["with-alloc"], optional = true }

[lints]
workspace = true
