[package]
name = "arca"
version = "0.0.0"
description = "Unified streaming archive library (Pure Rust). std high-level API: auto-detection, FS extraction, safe path handling."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
default = ["gzip", "zstd", "xz", "lz4"]
gzip = ["arca-filter/gzip"]
zstd = ["arca-filter/zstd"]
xz = ["arca-filter/xz"]
lz4 = ["arca-filter/lz4"]

[dependencies]
arca-core = { path = "../arca-core" }
arca-filter = { path = "../arca-filter" }

[dev-dependencies]
# Used only to generate gzip test data (pure Rust: miniz_oxide backend). The main crate does not depend on it.
flate2 = "1"

[lints]
workspace = true
