[package]
name = "arca"
version = "0.0.0"
description = "Unified streaming archive library (Pure Rust). std high-level API: auto-detection, FS extraction, safe path handling."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
default = ["gzip", "zstd", "xz", "lz4"]
gzip = ["arca-filter/gzip"]
zstd = ["arca-filter/zstd"]
xz = ["arca-filter/xz"]
lz4 = ["arca-filter/lz4"]
# WinZip AES-256 (AE-2) zip encryption/decryption (pure Rust, RustCrypto).
aes = ["dep:aes", "dep:ctr", "dep:hmac", "dep:sha1", "dep:pbkdf2", "dep:subtle", "dep:getrandom"]
# 7z read+write (single-folder LZMA2 subset). Pulls the pure-Rust lzma-rust2 codec and needs the
# shared CRC-32 primitives, which live behind `gzip` in arca-filter.
sevenz = ["dep:lzma-rust2", "gzip"]

[dependencies]
arca-core = { path = "../arca-core" }
arca-filter = { path = "../arca-filter" }
# LZMA2 codec for the 7z path (feature `sevenz`). Pure Rust.
lzma-rust2 = { version = "0.16.5", optional = true }
# AES layer (feature `aes`). SHA-1 is a WinZip AE-2 interoperability requirement, not a strength choice.
aes = { version = "0.8", optional = true }
ctr = { version = "0.9", optional = true }
hmac = { version = "0.12", optional = true }
sha1 = { version = "0.10", optional = true }
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"], optional = true }
subtle = { version = "2.6", default-features = false, optional = true }
getrandom = { version = "0.2", optional = true }

[dev-dependencies]
# Portable fuzz invariants, shared with the cargo-fuzz targets (see fuzz/). Pulling it here as a
# dev-dependency lets tests/fuzz_replay.rs call the exact same functions the fuzzer runs, and (via
# feature unification) switches on arca's `sevenz`/`aes` features for the whole test build so the
# replay gate covers every format regardless of the flags passed to `cargo test`.
arca-fuzz-cases = { path = "../fuzz/fuzz_lib" }
# Structured-input synthesis for the replay batch (deterministic; no rand, no clock).
arbitrary = { version = "1", features = ["derive"] }
# Used only to generate gzip test data (pure Rust: miniz_oxide backend). The main crate does not depend on it.
flate2 = "1"
lz4_flex = { version = "0.14.0", default-features = false, features = ["frame"] }
lzma-rust2 = "0.16.5"
ruzstd = "0.8.2"
sevenz-rust2 = "0.20.2"
zip = { version = "7.2.0", default-features = false, features = ["deflate", "aes-crypto"] }

[lints]
workspace = true
