# SPDX-FileCopyrightText: 2026 libarchive_oxide contributors
#
# SPDX-License-Identifier: MIT OR Apache-2.0

# Excluded cargo-fuzz workspace. Targets require nightly and a sanitizer runtime.
# Portable cases are in fuzz_lib and run through tests/fuzz_replay.rs.

[workspace]
resolver = "2"
members = ["fuzz_lib"]

[package]
name = "libarchive_oxide-fuzz"
version = "0.0.0"
publish = false
edition = "2021"
rust-version = "1.85"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
libarchive_oxide-fuzz-cases = { path = "fuzz_lib" }

# Keep the targets fast to link and free of unrelated harness cruft.
[profile.release]
debug = 1

# ── Reader targets: arbitrary bytes → detection + drain, no panic. ──

[[bin]]
name = "read_tar"
path = "fuzz_targets/read_tar.rs"
test = false
doc = false
bench = false

[[bin]]
name = "read_cpio"
path = "fuzz_targets/read_cpio.rs"
test = false
doc = false
bench = false

[[bin]]
name = "read_ar"
path = "fuzz_targets/read_ar.rs"
test = false
doc = false
bench = false

[[bin]]
name = "read_zip"
path = "fuzz_targets/read_zip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "read_7z"
path = "fuzz_targets/read_7z.rs"
test = false
doc = false
bench = false

[[bin]]
name = "read_iso"
path = "fuzz_targets/read_iso.rs"
test = false
doc = false
bench = false

# ── Round-trip targets: synthesized entry set → write → read back → id. ──

[[bin]]
name = "roundtrip_tar"
path = "fuzz_targets/roundtrip_tar.rs"
test = false
doc = false
bench = false

[[bin]]
name = "roundtrip_cpio"
path = "fuzz_targets/roundtrip_cpio.rs"
test = false
doc = false
bench = false

[[bin]]
name = "roundtrip_ar"
path = "fuzz_targets/roundtrip_ar.rs"
test = false
doc = false
bench = false

[[bin]]
name = "roundtrip_7z"
path = "fuzz_targets/roundtrip_7z.rs"
test = false
doc = false
bench = false

[[bin]]
name = "roundtrip_iso"
path = "fuzz_targets/roundtrip_iso.rs"
test = false
doc = false
bench = false

# ── Codec targets: decode-no-panic + decode∘encode = id. ──

[[bin]]
name = "codec_gzip"
path = "fuzz_targets/codec_gzip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "codec_zstd"
path = "fuzz_targets/codec_zstd.rs"
test = false
doc = false
bench = false

[[bin]]
name = "codec_xz"
path = "fuzz_targets/codec_xz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "codec_lz4"
path = "fuzz_targets/codec_lz4.rs"
test = false
doc = false
bench = false

[[bin]]
name = "codec_lzma2"
path = "fuzz_targets/codec_lzma2.rs"
test = false
doc = false
bench = false
