# SPDX-FileCopyrightText: 2026 libarchive_oxide contributors
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "libarchive_oxide-cli"
version.workspace = true
description = "Archive CLI tools: oxtar, oxcpio, oxcat, and oxunzip"
edition.workspace = true
# MSRV inherited from codec dependencies.
rust-version = "1.87"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
documentation = "https://docs.rs/libarchive_oxide-cli"
keywords = ["bsdtar", "cpio", "unzip", "archive", "cli"]
categories = ["command-line-utilities"]

[package.metadata.docs.rs]
all-features = true

# Command-line entry points.
[[bin]]
name = "oxtar"
path = "src/bin/oxtar.rs"

[[bin]]
name = "oxcpio"
path = "src/bin/oxcpio.rs"

[[bin]]
name = "oxcat"
path = "src/bin/oxcat.rs"

[[bin]]
name = "oxunzip"
path = "src/bin/oxunzip.rs"

[dependencies]
# Enable CLI-supported formats.
libarchive_oxide = { path = "../libarchive_oxide", version = "0.2.0", features = ["aes", "sevenz"] }
libarchive_oxide-core = { path = "../libarchive_oxide-core", version = "0.2.0" }
cap-std = "4.0.2"

[lints]
workspace = true
