# SPDX-FileCopyrightText: 2026 libarchive_oxide contributors
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "libarchive_oxide-core"
version.workspace = true
description = "Frozen trait algebra and sans-IO core: Transform/Filter/Format/EntryReader/EntryWriter. no_std + alloc."
edition.workspace = true
# Lowest floor in the workspace: no_std + alloc, zero external dependencies. Uses the workspace
# baseline (measured with cargo-msrv), so no per-crate override.
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
documentation = "https://docs.rs/libarchive_oxide-core"
keywords = ["archive", "tar", "cpio", "no-std", "embedded"]
categories = ["compression", "filesystem", "no-std"]
# Trim the published tarball: integration tests are repo-only, not needed by consumers.
exclude = ["tests/"]

[features]
default = []
# core defaults to no_std + alloc. std is only a thin addition for adaptors (future).
std = []

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
