# SPDX-FileCopyrightText: 2026 libarchive_oxide contributors
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "libarchive_oxide-core"
version.workspace = true
description = "no_std sans-I/O archive state machines and uncompressed formats"
edition.workspace = true
# Workspace MSRV.
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
documentation = "https://docs.rs/libarchive_oxide-core"
keywords = ["archive", "tar", "cpio", "no-std", "embedded"]
categories = ["compression", "filesystem", "no-std"]
# Repository-only integration tests.
exclude = ["tests/"]

[features]
default = []
# Reserved standard-library adapters.
std = []

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
