# SPDX-FileCopyrightText: 2026 libarchive_oxide contributors
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "libarchive_oxide"
version.workspace = true
description = "Pure-Rust archive detection, compression, extraction, and creation"
edition.workspace = true
# MSRV with all features.
rust-version = "1.87"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
documentation = "https://docs.rs/libarchive_oxide"
keywords = ["archive", "tar", "zip", "7z", "iso9660"]
categories = ["compression", "filesystem", "parsing"]
# Repository-only integration tests.
exclude = ["tests/"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[features]
default = ["gzip", "zstd", "xz", "lz4"]
# Compression codecs.
gzip = ["dep:miniz_oxide"]
zstd = ["dep:ruzstd"]
xz = ["dep:lzma-rust2"]
lz4 = ["dep:lz4_flex"]
# WinZip AES-256 AE-2.
aes = ["dep:aes", "dep:ctr", "dep:hmac", "dep:sha1", "dep:pbkdf2", "dep:subtle", "dep:getrandom"]
# 7z single-folder LZMA2 and shared CRC-32.
sevenz = ["dep:lzma-rust2", "gzip"]

[dependencies]
libarchive_oxide-core = { path = "../libarchive_oxide-core", version = "0.1.0" }
# Feature-gated codecs.
miniz_oxide = { version = "0.9.1", default-features = false, features = ["with-alloc"], optional = true }
ruzstd = { version = "0.8.2", optional = true }
lz4_flex = { version = "0.14.0", default-features = false, features = ["frame"], optional = true }
# Shared by xz and 7z.
lzma-rust2 = { version = "0.16.5", optional = true }
# WinZip AE-2 requires SHA-1.
aes = { version = "0.9", optional = true }
ctr = { version = "0.10", optional = true }
hmac = { version = "0.13", optional = true }
sha1 = { version = "0.11", optional = true }
pbkdf2 = { version = "0.13", default-features = false, features = ["hmac"], optional = true }
subtle = { version = "2.6", default-features = false, optional = true }
getrandom = { version = "0.4", optional = true }

[dev-dependencies]
# Shared portable fuzz cases.
libarchive_oxide-fuzz-cases = { path = "../fuzz/fuzz_lib" }
# Deterministic structured inputs.
arbitrary = { version = "1", features = ["derive"] }
# Test fixture generation.
flate2 = "1"
lz4_flex = { version = "0.14.0", default-features = false, features = ["frame"] }
lzma-rust2 = "0.16.5"
ruzstd = "0.8.2"
sevenz-rust2 = "0.21.3"
zip = { version = "8.6.0", default-features = false, features = ["deflate", "aes-crypto"] }

[lints]
workspace = true
