# SPDX-FileCopyrightText: 2026 libarchive_oxide contributors
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "libarchive_oxide"
version.workspace = true
description = "Pure-Rust archive detection, compression, extraction, and creation"
edition.workspace = true
# MSRV with all features.
rust-version = "1.87"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
documentation = "https://docs.rs/libarchive_oxide"
keywords = ["archive", "tar", "zip", "7z", "iso9660"]
categories = ["compression", "filesystem", "parsing"]
# Repository-only integration tests.
exclude = ["tests/"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[features]
default = ["gzip", "zstd", "xz", "lz4"]
# Compression codecs.
gzip = []
zstd = [
    "dep:ruzstd",
    "dep:zstd-codec",
    "dep:compression-codecs",
    "compression-codecs/zstd",
    "async-compression?/zstd",
]
xz = [
    "dep:lzma-rust2",
    "dep:compression-codecs",
    "compression-codecs/xz",
    "async-compression?/xz",
]
lz4 = [
    "dep:lz4_flex",
    "dep:compression-codecs",
    "compression-codecs/lz4",
    "async-compression?/lz4",
]
# WinZip AES-256 AE-2.
aes = ["dep:aes", "dep:ctr", "dep:hmac", "dep:sha1", "dep:pbkdf2", "dep:subtle", "dep:getrandom"]
# 7z single-folder LZMA2 and shared CRC-32.
sevenz = ["dep:lzma-rust2", "gzip"]
# Runtime-neutral and Tokio I/O adapters. Both drive the same sans-I/O
# pipeline; Tokio is a thin poll shim and does not enable a second parser.
async = [
    "dep:futures-io",
    "dep:async-compression",
    "async-compression/futures-io",
    "async-compression/gzip",
]
tokio = ["async", "dep:tokio"]

[dependencies]
libarchive_oxide-core = { path = "../libarchive_oxide-core", version = "0.2.0" }
# Feature-gated codecs.
miniz_oxide = { version = "0.9.1", default-features = false, features = ["with-alloc"] }
ruzstd = { version = "0.8.2", optional = true }
zstd-codec = { package = "zstd", version = "0.13.3", optional = true }
lz4_flex = { version = "0.14.0", default-features = false, features = ["frame"], optional = true }
compression-codecs = { version = "0.4.38", default-features = false, optional = true }
# Shared by xz and 7z.
lzma-rust2 = { version = "0.16.5", optional = true }
# WinZip AE-2 requires SHA-1.
aes = { version = "0.9", optional = true }
ctr = { version = "0.10", optional = true }
hmac = { version = "0.13", optional = true }
sha1 = { version = "0.11", optional = true }
pbkdf2 = { version = "0.13", default-features = false, features = ["hmac"], optional = true }
subtle = { version = "2.6", default-features = false, optional = true }
getrandom = { version = "0.4", optional = true }
futures-io = { version = "0.3.31", optional = true }
async-compression = { version = "0.4.42", default-features = false, optional = true }
tokio = { version = "1.48", default-features = false, features = ["io-util", "rt", "sync"], optional = true }
cap-std = "4.0.2"
cap-fs-ext = "4.0.2"
tempfile = "3.27.0"
zeroize = { version = "1.8.2", features = ["derive"] }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
rustix = { version = "1.1.4", features = ["fs"] }

[dev-dependencies]
# Shared portable fuzz cases.
libarchive_oxide-fuzz-cases = { path = "../fuzz/fuzz_lib" }
# Deterministic structured inputs.
arbitrary = { version = "1", features = ["derive"] }
# Test fixture generation.
flate2 = "1"
lz4_flex = { version = "0.14.0", default-features = false, features = ["frame"] }
lzma-rust2 = "0.16.5"
ruzstd = "0.8.2"
sevenz-rust2 = "0.21.3"
zip = { version = "8.6.0", default-features = false, features = ["deflate", "aes-crypto"] }
futures-lite = "2.6.1"
tokio = { version = "1.48", features = ["io-util", "macros", "rt"] }

[lints]
workspace = true
