# SPDX-FileCopyrightText: 2026 libarchive_oxide contributors
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "libarchive_oxide"
version.workspace = true
description = "Safe-Rust archive detection, compression, extraction, and creation"
edition.workspace = true
# MSRV with all features.
rust-version = "1.87"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
documentation = "https://docs.rs/libarchive_oxide"
keywords = ["archive", "tar", "zip", "7z", "iso9660"]
categories = ["compression", "filesystem", "parsing"]
# Repository-only integration tests.
exclude = ["tests/"]

[package.metadata.docs.rs]
no-default-features = true
features = ["portable-codecs", "aes", "sevenz", "async", "tokio"]
rustdoc-args = ["--generate-link-to-definition"]

[features]
default = ["portable-codecs"]
# Mutually exclusive codec backend profiles. Individual codec features remain
# compatible and select their portable backend when neither profile is named.
portable-codecs = ["gzip", "bzip2", "zstd", "xz", "lz4"]
native-codecs = [
    "gzip",
    "bzip2",
    "zstd",
    "xz",
    "lz4",
    "dep:compression-codecs",
    "compression-codecs/gzip",
    "compression-codecs/bzip2",
    "compression-codecs/zstd",
    "compression-codecs/lz4",
    "dep:xz-codec",
    "bzip2/bzip2-sys",
    "dep:flate2",
]
# Compression codecs.
gzip = []
bzip2 = [
    "dep:bzip2",
    "dep:compression-codecs",
    "compression-codecs/bzip2",
    "async-compression?/bzip2",
]
zstd = ["dep:ruzstd"]
xz = ["dep:lzma-rust2"]
lz4 = ["dep:lz4_flex", "dep:twox-hash"]
# WinZip AES-256 AE-2 (ZIP) and AES-256/SHA-256 (7z, via `cbc`).
aes = ["dep:aes", "dep:cbc", "dep:ctr", "dep:hmac", "dep:sha1", "dep:pbkdf2", "dep:subtle", "dep:getrandom"]
# 7z single-folder LZMA2 and shared CRC-32.
sevenz = ["dep:lzma-rust2", "gzip"]
# Runtime-neutral and Tokio I/O adapters. Both drive the same sans-I/O
# pipeline; Tokio is a thin poll shim and does not enable a second parser.
async = [
    "dep:futures-io",
    "dep:async-compression",
    "async-compression/futures-io",
    "async-compression/gzip",
]
tokio = ["async", "dep:tokio"]

[dependencies]
libarchive_oxide-core = { path = "../libarchive_oxide-core", version = "0.2.0" }
# Feature-gated codecs.
miniz_oxide = { version = "0.9.1", default-features = false, features = ["with-alloc"] }
ruzstd = { version = "0.8.2", optional = true }
lz4_flex = { version = "0.14.0", default-features = false, features = ["frame"], optional = true }
twox-hash = { version = "2.1.3", default-features = false, features = ["xxhash32"], optional = true }
compression-codecs = { version = "0.4.38", default-features = false, optional = true }
bzip2 = { version = "0.6.1", optional = true }
flate2 = { version = "1.1.9", default-features = false, features = ["zlib"], optional = true }
xz-codec = { package = "xz2", version = "0.1.7", optional = true }
# Shared by xz and 7z.
lzma-rust2 = { version = "0.16.5", default-features = false, features = ["std", "encoder", "xz"], optional = true }
# WinZip AE-2 requires SHA-1. `zeroize` wipes the expanded AES key schedule on drop,
# so a folder/member key never lingers in freed memory after the decoder is dropped
# (defense in depth for both the 7z CBC and the ZIP AE-2 CTR paths).
aes = { version = "0.9", features = ["zeroize"], optional = true }
# 7z AES-256/SHA-256 uses CBC (ZIP AE-2 uses CTR via `ctr`).
cbc = { version = "0.2", optional = true }
ctr = { version = "0.10", optional = true }
hmac = { version = "0.13", optional = true }
sha1 = { version = "0.11", optional = true }
pbkdf2 = { version = "0.13", default-features = false, features = ["hmac"], optional = true }
subtle = { version = "2.6", default-features = false, optional = true }
getrandom = { version = "0.4", optional = true }
futures-io = { version = "0.3.31", optional = true }
async-compression = { version = "0.4.42", default-features = false, optional = true }
tokio = { version = "1.48", default-features = false, features = ["io-util", "rt", "sync"], optional = true }
cap-std = "4.0.2"
cap-fs-ext = "4.0.2"
tempfile = "3.27.0"
zeroize = { version = "1.8.2", features = ["derive"] }
sha2 = "0.11"

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
rustix = { version = "1.1.4", features = ["fs"] }

[dev-dependencies]
# Shared portable fuzz cases.
libarchive_oxide-fuzz-cases = { path = "../fuzz/fuzz_lib", default-features = false }
# Deterministic structured inputs.
arbitrary = { version = "1", features = ["derive"] }
# Test fixture generation.
flate2 = "1"
lz4_flex = { version = "0.14.0", default-features = false, features = ["frame"] }
# Independent liblz4 consumer used only to validate our Pure-Rust writer output.
lz4-codec = { package = "lz4", version = "1.28.1" }
lzma-rust2 = "0.16.5"
# Independent liblzma producer/consumer used only for XZ interoperability tests.
xz-codec = { package = "xz2", version = "0.1.7" }
ruzstd = "0.8.2"
zstd-codec = { package = "zstd", version = "0.13.3" }
# Independent SHA-256 reference for OCI layer digest/diffID tests.
sha2 = "0.11"
# `bzip2` is on by default; `deflate` and `zstd` are enabled so the 7z differential
# tests can produce Deflate/Zstd folders for arca's reuse-codec decode path.
sevenz-rust2 = { version = "0.21.3", features = ["deflate", "zstd"] }
zip = { version = "8.6.0", default-features = false, features = ["deflate", "aes-crypto", "bzip2", "zstd", "lzma"] }
# Independent tar/ar producers and consumers used only for RM-304 interop tests.
tar = { version = "0.4", default-features = false }
ar = "0.9"
futures-lite = "2.6.1"
tokio = { version = "1.48", features = ["io-util", "macros", "rt"] }

[lints]
workspace = true
