[package]
name = "arca-fuzz-cases"
version = "0.0.0"
publish = false
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Portable fuzz invariant bodies for arca, shared by the cargo-fuzz targets and the arca/tests/fuzz_replay.rs runner. No libFuzzer dependency."

[lib]
# A plain library: no libFuzzer, no proc-macro. Builds on stable Windows/MSVC.
doctest = false

[dependencies]
# All formats and codecs are needed, so every relevant feature is switched on unconditionally.
arca-core = { path = "../../arca-core" }
arca-filter = { path = "../../arca-filter", default-features = false, features = ["gzip", "zstd", "xz", "lz4", "std"] }
arca = { path = "../../arca", default-features = false, features = ["gzip", "zstd", "xz", "lz4", "aes", "sevenz"] }
# Structured input synthesis (round-trip entry sets); no rand/no clock.
arbitrary = { version = "1", features = ["derive"] }
# The LZMA2 codec that backs the 7z folder — driven directly for the `codec_lzma2` target.
lzma-rust2 = "0.16.5"
