# SPDX-FileCopyrightText: 2026 libarchive_oxide contributors
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "libarchive_oxide-fuzz-cases"
version = "0.0.0"
publish = false
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Portable fuzz invariant bodies for libarchive_oxide, shared by the cargo-fuzz targets and the libarchive_oxide/tests/fuzz_replay.rs runner. No libFuzzer dependency."

[lib]
# A plain library: no libFuzzer, no proc-macro. Builds on stable Windows/MSVC.
doctest = false

[dependencies]
# All formats and codecs are needed, so every relevant feature is switched on unconditionally.
# The former arca-filter crate is now `libarchive_oxide::filter`, gated by the same codec features.
libarchive_oxide-core = { path = "../../libarchive_oxide-core" }
libarchive_oxide = { path = "../../libarchive_oxide", default-features = false, features = ["gzip", "zstd", "xz", "lz4", "aes", "sevenz"] }
# Structured input synthesis (round-trip entry sets); no rand/no clock.
arbitrary = { version = "1", features = ["derive"] }
# The LZMA2 codec that backs the 7z folder — driven directly for the `codec_lzma2` target.
lzma-rust2 = "0.16.5"
